--- a/main.html
+++ b/main.html
@@ -4,11 +4,24 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+<style>
+	.box{
+		background-color:lightblue;
+		width:300px;
+		border:15px solid blue;
+		margin:20px ;
+		height:100px;
+		padding:50px;
+	}
+</style>
 </head>
+	
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+<div class="box">	
+<p>this is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.</p>
+	</div>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
