--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 
 <body>
 <div class="box">	
-<p>this is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.</p>
+<p>This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p>
 	</div>
 	<script type="text/javascript" src="./script.js">
 </script>
