--- a/main.html
+++ b/main.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
-<style>
-	.box{
-		background-color:lightblue;
-		width:300px;
-		border:15px solid blue;
-		margin:20px ;
-		height:100px;
-		padding:50px;
-	}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Box Model Demo</title>
+    <style>
+        .box {
+            background-color: lightblue;
+            width: 300px;
+            border: 15px solid blue;
+            margin: 20px;
+            padding: 50px;
+            box-sizing: border-box;
+        }
+        .box p {
+            margin: 0; /* Remove default margin */
+        }
+    </style>
 </head>
-	
 
 <body>
-<div class="box">	
-<p>This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p>
-	</div>
-	<script type="text/javascript" src="./script.js">
-</script>
-
+    <div class="box">
+        This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
+    </div>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
