--- a/main.html
+++ b/main.html
@@ -21,9 +21,9 @@
 </head>
 
 <body>
-    <div class="box">
-        This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
-    </div>
+   <div class="box">
+    This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases
+</div>
     <script type="text/javascript" src="./script.js"></script>
 </body>
 
