--- a/main.html
+++ b/main.html
@@ -1,26 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box Model Demo</title>
-    <style>
-        .box {
-            background-color: lightblue;
-            width: 300px;
-            border: 15px solid blue;
-            margin: 20px;
-            padding: 50px;
-            box-sizing: border-box;
-        }
-    </style>
+    <title>Box Model Test</title>
 </head>
-
 <body>
-    <div class="box">
-    This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases
-</div>
+    <div style="width: 300px; background-color: lightblue; border: 15px solid blue; padding: 50px; margin: 20px;">
+        This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
+    </div>
 </body>
-
 </html>
