--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <title>Box Model Test</title>
 </head>
 <body>
-    <div style="width: 300px; background-color: lightblue; border: 15px solid blue; padding: 50px; margin: 20px;">
+    <div style="width: 300px; background-color: lightblue; border: 15px solid blue; padding: 50px; margin: 20px solid green;padding: 50px">
         This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
     </div>
 </body>
