--- a/main.html
+++ b/main.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Box Model Test</title>
-</head>
+<style>
+.box{
+	width: 300px;
+	background-color: lightblue;
+	border: 15px solid blue;
+margin: 40px;
+	padding:50px;
+}
+</style></head>
 <body>
-    <div style="width: 300px; background-color: lightblue; border: 15px solid blue; padding: 50px; margin: 20px solid green;padding: 50px">
+    <div class="box">
         This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
     </div>
 </body>
