--- a/main.html
+++ b/main.html
@@ -9,13 +9,12 @@
 	width: 300px;
 	background-color: lightblue;
 	border: 15px solid blue;
-margin: 40px;
+margin: 20px;
 	padding:50px;
 }
 </style></head>
 <body>
     <div class="box">
-        This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
-    </div>
+<p>This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p>    </div>
 </body>
 </html>
