--- a/main.html
+++ b/main.html
@@ -15,6 +15,6 @@ margin: 20px;
 </style></head>
 <body>
     <div class="box">
-<p>This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p>    </div>
+<p>This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.</p>    </div>
 </body>
 </html>
