--- a/main.html
+++ b/main.html
@@ -1,20 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box Model Test</title>
-<style>
-.box{
-	width: 300px;
-	background-color: lightblue;
-	border: 15px solid blue;
-margin: 20px;
-	padding:50px;
-}
-</style></head>
-<body>
-    <div class="box">
-<p>This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.</p>    </div>
-</body>
+<html>
+	<meta charset="utf-8">
+	<meta name ="viewport"content="width=device-width,initial-scale=1.0">
+	<head>
+		<style>
+			.box{
+				width:300px;
+				background-color:lightblue;
+				padding:50px;
+				border:15px solid blue;
+				margin:20px;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="box">
+			This is a demo of box model, try to replicate
+			this box model in Html & Css and try to
+			pass all the test cases.
+		</div>
+	</body>
 </html>
