--- a/main.html
+++ b/main.html
@@ -14,9 +14,7 @@
 	</head>
 	<body>
 		<div class="box">
-			This is a demo of box model, try to replicate
-			this box model in Html & Css and try to
-			pass all the test cases.
+			This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
 		</div>
 	</body>
 </html>
